# planwijs

./: .env.example  .gitignore  FRONTEND_TEST_FEEDBACK.md  README.md  alembic.ini  deploy.sh  download_schoolboeken.py  main.py  makefile  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_book_chapter_paragraph.py  0003_add_class_table.py  0004_make_class_difficulty_nullable.py  0005_add_subject_table_and_book_relation.py  0006_remove_legacy_subject.py  0006_remove_legacy_subject_columns.py  0007_add_lesplan_tables.py  0008_fix_lesplan_status_enum_case.py  0009_update_lesplan_overview_fields.py  0010_add_learning_progression_and_builds_on.py  0011_learning_goals_jsonb.py  0012_add_lesson_preparation_todos.py  0013_add_lesson_plan_planned_date.py  0014_cascade_user_deletes.py  0015_review_overview_contract.py  0016_fix_preparation_status_enum_case.py  0017_add_class_profile_fields.py  0018_add_event_user_id.py  0019_added_classroom_model.py  0020_add_classroom_to_lesplan.py  0021_drop_approval_readiness.py  0022_add_name_column_to_class.py  0023_create_file_table.py  0024_add_folder_table.py  0025_add_extracted_text.py  0026_add_status_for_files.py  (+12 more)
app/: auth.py  config.py  constants.py  database.py  exceptions.py  logging_config.py  main.py  models.py  redis.py  scraper.py  task_state.py  tasks.py  worker.py
tests/: test_database_retry.py  test_learning_goals_quality.py  test_lesplan_jsonb_defaults.py  test_lesplan_overview_contract.py  test_lesplan_overview_normalization.py  test_preparation_agent.py
(+118 files in other folders)
